--- a/Morbidity_IS/DAL/DAL/DAL.csproj
+++ b/Morbidity_IS/DAL/DAL/DAL.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <Folder Include="Repositories\Impl\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
